# IES-Project

./: README.md
docs/PULL_REQUEST_TEMPLATE/: bugfix_template.md  docs_template.md  feature_template.md  hotfix_template.md  refactor_template.md
docs/api/: API_Documentation.md
docs/minutes/: minute04_12.md  minute11_12.md  minute13_11.md  minute15_10.txt  minute20_10.md  minute27_10 .md  minute29_11.md  minute6_10.txt  minutes_template.md
docs/prototype/: prototype.md
docs/workflow/: git-flow.md
proj/: .env  docker-compose.yml
proj/backend/: Dockerfile  pom.xml
proj/backend/src/main/resources/: application.properties
proj/database/: Dockerfile
proj/database/init-scripts/: dependent_config.sql
proj/datagenerator/: Dockerfile  pyproject.toml
proj/datagenerator/datagenerator/: producer.py
proj/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
proj/frontend/src/: App.tsx  index.css  output.css
proj/frontend/src/Pages/: AdminPage.tsx  FoodChainPage.tsx  HomePage.tsx  LoginPage.tsx  ManagerFormPage.tsx  RequestPage.tsx  RestaurantStatistics.tsx  SettingsPage.tsx  UserForm.tsx  UserPage.tsx
proj/frontend/src/api/: apiAdmin.tsx  apiConfig.tsx  apiFoodChain.tsx  apiLogin.tsx  apiOrders.tsx
proj/frontend/src/components/: ApplicationForm.tsx  EditableForm.tsx  Form.tsx  Layout.tsx  Map.tsx  SideBar.tsx  map-widget.tsx
proj/frontend/src/components/Cards/: Card.tsx  FoodChaindCard.tsx  (+1 more)
proj/frontend/src/context/: FormContext.tsx  UserContextFile.tsx
proj/frontend/src/utils/: userActions.tsx
(+48 files in other folders)
